# DevStudy

./: .gitignore
C++/algorithm_dongbinna/sort_insertion/: main.cpp
C++/algorithm_dongbinna/sort_quick/: main.cpp
C++/backjoon/: test.cpp
C++/final_exam/: test  test.cpp  test.txt
C++/kmu_snake_game/: main  main.cpp  makefile
C++/kmu_snake_game_master_clone/: snake-game.docx
C++/kmuproj/: quizBasic.txt  test  test.cpp  test.txt  text.txt  tt  tt.cpp
C++/kmuproj/cmakeProj1/Ex00/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Ex00  Main.cpp  build.ninja  cmake_install.cmake
C++/kmuproj/lab/lab_friend/: CMakeLists.txt  main.cpp  makefile  point.cpp  point.hpp
C++/ncurses_practice/: borderwindow.cpp  hello  hello.cpp  multiwindow  multiwindow.cpp  simplewindow  simplewindow.cpp
C++/snake_game_candre97/: main.cc  makefile
DataAnalysis/kmu_ITConsulting/: correlation_analysis.py  regression_analysis01.py
JupyterNotebook/: 12기_멤버_코테_문제지_송규헌.ipynb  Untitled.ipynb  requirements.txt
JupyterNotebook/BigDataPromotion_Gwangjingu/: shp_practice.ipynb  shp_to_csv.ipynb  데이터 분기별로 분리하는 함수.ipynb
JupyterNotebook/Data_Analysis/: 02_LinearRegression.ipynb
JupyterNotebook/kmu_itconsulting/: 01_상관분석.ipynb  02_회귀분석-Copy1.ipynb  02_회귀분석.ipynb  03_로지스틱 회귀분석.ipynb  04_연관법칙.ipynb  05_텐서플로우_배열.ipynb  06_2_딥러닝_입력변수2개테스트하기.ipynb  06_딥러닝(텐서플로우_기본).ipynb  07_딥러닝_ConvNet(이미지).ipynb  08_이미치처리_OpenCV.ipynb
JupyterNotebook/test/: Untitled.ipynb  tree
backjoon/cpp/: test
backjoon/python/: test.py
myNotes/: JDBC코드_Kosmo.hwp  Java코드_Kosmo.hwp  Web이론및코드_Kosmo.hwp
(+26247 files in other folders)
